responsive alignmnet fixes

--- a/src/components/logosBar.css
+++ b/src/components/logosBar.css
@@ -1,24 +1,29 @@
 .logoContainer{
+    width: 100%;
+    max-height: 25vh;
+}
+.logos{
     height: 200px;
     display: flex;
     width: 100%;
+    overflow: hidden;
     transform: translate3d(0, 0, 0);
     -moz-animation: moveSlideshow 60s linear infinite;
     -webkit-animation: moveSlideshow 60s linear infinite;
     animation: moveSlideshow 60s linear infinite;
 }
 
-.logoContainer img{
+.logos img{
     height: 7vh;
     margin: 0.5rem;
 }
 
-.logoContainer img:nth-child(odd) {
+.logos img:nth-child(odd) {
     align-self: flex-start;
     transform: translate3d(0, 0, 0);
     animation: moveDownUp  15s linear infinite;
 }
-.logoContainer img:nth-child(even) {
+.logos img:nth-child(even) {
     align-self: flex-end;
     transform: translate3d(0, 0, 0);
     animation: moveUpDown 15s linear infinite;
@@ -40,7 +45,7 @@
         -webkit-transform: translateY(0%);  
     }
     50% { 
-        -webkit-transform: translateY(-200%);  
+        -webkit-transform: translateY(-100%);  
     }
     100% { 
         -webkit-transform: translateY(0%);
@@ -51,7 +56,7 @@
         -webkit-transform: translateY(0%);  
     }
     50% { 
-        -webkit-transform: translateY(200%);  
+        -webkit-transform: translateY(100%);  
     }
     100% { 
         -webkit-transform: translateY(0%);
